# filmography

./: .env.example  .gitignore  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.test.json  vite.config.ts
.github/workflows/: pages.yml
docs/: markdown-notes-format.md  obsidian-format.md  privacy-and-security.md  updating-and-deploying.md
public/: manifest.webmanifest  sw.js
public/data/: filmography.json
python/filmography/: __init__.py  ai.py  builder.py  cli.py  markdown_notes.py  models.py  obsidian.py  recommendations.py  tmdb.py
schemas/: snapshot.schema.json
src/: App.tsx  main.tsx  styles.css
src/components/: DiscoveryCard.tsx  EmptyState.tsx  FilmListControls.tsx  FilmMeta.tsx  FilmTitleLink.tsx  FilterBar.tsx  PageHeader.tsx  Poster.tsx  RatingLegend.tsx  ReviewCard.tsx  Score.tsx  ScorePair.tsx  TasteNetwork.tsx  WatchlistCard.tsx
src/domain/: snapshot.ts
src/hooks/: useFilmList.ts  useSnapshot.ts
src/lib/: filmList.ts  format.ts  snapshot-loader.ts  taste.ts  tasteGraph.ts
src/views/: DashboardView.tsx  DiscoveriesView.tsx  TasteView.tsx  WatchedView.tsx  WatchlistView.tsx
tasks/: lessons.md  todo.md
tests/frontend/: app.test.tsx  fixtures.ts  service-worker.test.ts  snapshot-loader.test.ts  snapshot.test.ts  taste.test.tsx  views.test.tsx
tests/python/: test_ai.py  test_builder_cli.py  test_markdown_notes.py  test_models.py  test_obsidian.py  test_recommendations.py  test_tmdb.py
