[project]
name = "filmography-journal"
version = "0.1.0"
description = "Generate a static film journal from Obsidian notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.10.4",
  "pyyaml>=6.0.2",
]

[project.scripts]
filmography = "filmography.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.391",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/filmography"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "--strict-markers -q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["python", "tests/python"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
